deploy-rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: finance
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  serviceName: rabbitmq-svc
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
          imagePullPolicy: Always
          volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: finance
  name: rabbitmq-svc
  labels:
    app: rabbitmq
spec:
  type: NodePort
  ports:
    - port: 15672
      name: rabbitmq-console
      protocol: TCP
      targetPort: 15672
    - port: 5672
      name: rabbitmq-server
      protocol: TCP
      targetPort: 5672
  selector:
    app: rabbitmq
