deploy-minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: finance
  name: minio
  labels:
    app: minio
spec:
  serviceName: minio-svc
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          ports:
            - containerPort: 9000
            - containerPort: 9001
          image: quay.io/minio/minio
          args:
          - server 
          - /data 
          - --console-address 
          - :9001
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /data
            name: minio-data              
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  labels:
    app: minio
  namespace: finance
spec:
  ports:
    - port: 9001
      name: minio-console
      targetPort: 9001
    - port: 9000
      name: minio
      targetPort: 9000
  selector:
    app: minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: finance
spec:
  ingressClassName: nginx
  rules:
    - host: minio.ada
      http:
        paths:
          - backend:
              service:
                name: minio-svc
                port:
                  number: 9001
            path: /minio-console
            pathType: Prefix
          - backend:
              service:
                name: minio-svc
                port:
                  number: 9000
            path: /
            pathType: Prefix
